--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Pokemón</title>
     <link rel="icon" href="imgs/icon/favicon.ico" type="image/ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav id="navbar">
+    <div class="logo">Site Pokémon</div>
+    <ul id="menu">
+        <li><a href="#noticias">Notícias</a></li>
+        <li><a href="#temporada">Temporada</a></li>
+        <li><a href="#sobremesas">Eventos</a></li>
+        <li><a href="#contato">Comunidade</a></li>
+        <li><a href="#Loja">Loja</a></li>
+    </ul>
+</nav>
 </body>
 </html>
