Estilizado parte do CSS

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>Loja Pokemón</title>
     <link rel="icon" href="imgs/icon/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <nav id="navbar">
     <div class="logo">Site Pokémon</div>
     <ul id="menu">
-        <li><a href="#noticias">Notícias</a></li>
-        <li><a href="#temporada">Temporada</a></li>
-        <li><a href="#sobremesas">Eventos</a></li>
-        <li><a href="#contato">Comunidade</a></li>
-        <li><a href="#Loja">Loja</a></li>
+        <li><a href="#noticias">NOTÍCIAS</a></li>
+        <li><a href="#temporada">TEMPORADA</a></li>
+        <li><a href="#sobremesas">EVENTOS</a></li>
+        <li><a href="#contato">CONTATO</a></li>
+        <li><a href="#Loja">LOJA</a></li>
     </ul>
 </nav>
 </body>
