--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <nav id="navbar">
     <div class="logo">Site Pokémon</div>
     <ul id="menu">
-        <li><a href="#noticias">NOTÍCIAS</a></li>
-        <li><a href="#temporada">TEMPORADA</a></li>
-        <li><a href="#sobremesas">EVENTOS</a></li>
-        <li><a href="#contato">CONTATO</a></li>
-        <li><a href="#Loja">LOJA</a></li>
+        <li class="container"><a href="#noticias">NOTÍCIAS</a></li>
+        <li class="container"><a href="#temporada">TEMPORADA</a></li>
+        <li class="container"><a href="#sobremesas">EVENTOS</a></li>
+        <li class="container"><a href="#contato">CONTATO</a></li>
+        <li><a href="#loja">LOJA</a></li>
     </ul>
 </nav>
 </body>
