--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja Pokemón</title>
-    <link rel="icon" href="imgs/icon/favicon.ico" type="image/ico">
+    <title>Pokémon GO</title>
+    <link rel="icon" href="imgs/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,12 +13,12 @@
 
 <body>
     <nav id="navbar">
-    <div class="logo">Site Pokémon</div>
+    <div class="logo"> <img src="imgs/logo.png" alt=""> </div>
     <ul id="menu">
-        <li class="container"><a href="#noticias">NOTÍCIAS</a></li>
-        <li class="container"><a href="#temporada">TEMPORADA</a></li>
-        <li class="container"><a href="#sobremesas">EVENTOS</a></li>
-        <li class="container"><a href="#contato">CONTATO</a></li>
+        <li><a href="#noticias">NOTÍCIAS</a></li>
+        <li><a href="#temporada">TEMPORADA</a></li>
+        <li><a href="#eventos">EVENTOS</a></li>
+        <li><a href="#contato">CONTATO</a></li>
         <li><a href="#loja">LOJA</a></li>
     </ul>
 </nav>
