--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <nav id="navbar">
     <div class="logo"> <img src="imgs/logo.png" alt=""> </div>
     <ul id="menu">
-        <li><a href="#noticias">NOTÍCIAS</a></li>
+        <li><a href="noticias.html">NOTÍCIAS</a></li>
         <li><a href="#temporada">TEMPORADA</a></li>
         <li><a href="#eventos">EVENTOS</a></li>
         <li><a href="#contato">CONTATO</a></li>
         <li><a href="#loja">LOJA</a></li>
     </ul>
+
+   
 </nav>
 </body>
 </html>
