--- a/index.html
+++ b/index.html
@@ -16,18 +16,25 @@
     <nav id="navbar">
     <div class="logo"> <img src="imgs/logo.png" alt=""> </div>
     <ul id="menu">
-        <li><a href="noticias/">NOTÍCIAS</a></li>
-        <li><a href="temporada">TEMPORADA</a></li>
+        <li><a href="pokemon.html">POKÉMON</a></li>
+        <li><a href="personagens">PERSONAGENS</a></li>
         <li><a href="eventos">EVENTOS</a></li>
         <li><a href="contato">CONTATO</a></li>
         <li><a href="loja">LOJA</a></li>
     </ul>
     </nav>
 
+    <div class="container">
+        <a class="cont-banner" href="https://www.primevideo.com/-/pt/detail/Pok%C3%A9mon-the-Series-Sun-Moon/0MO3POR25Q8GTB4EOGSEHGPF0D" target="_blank">
+        <img src="imgs/banner.jpg" alt=""></a>
 
-    <section class="enredo">
-      <h2>Enredo</h2>
-      <p>Ash, Delia e Mr. Mime, apelidado de Mime, estão de férias na região de Alola, quando Ash tem um encontro com Tapu Koko, o guardião Pokémon da Ilha de Melemele, que o apresenta a Pulseira Z, um dispositivo que, quando emparelhado com um cristal especial, permite que um Pokémon lance um movimento poderoso quando sincronizado com seu treinador. Isso o leva a ficar em Alola e se matricular na escola Pokémon local. Quando ele decide realizar os testes necessários para dominar o poder do Anel Z, os novos colegas de classe de Ash: Victoria, Lulú, Lillian, Cris e Kiawe decidem ajudá-lo.</p>
-    </section>
+
+        <div class="cont-enredo">
+        <h2>Enredo</h2>
+        <p>Ash, Delia e Mr. Mime, apelidado de Mime, estão de férias na região de Alola, quando Ash tem um encontro com Tapu Koko, o guardião Pokémon da Ilha de Melemele, que o apresenta a Pulseira Z, um dispositivo que, quando emparelhado com um cristal especial, permite que um Pokémon lance um movimento poderoso quando sincronizado com seu treinador. Isso o leva a ficar em Alola e se matricular na escola Pokémon local. Quando ele decide realizar os testes necessários para dominar o poder do Anel Z, os novos colegas de classe de Ash: Victoria, Lulú, Lillian, Cris e Kiawe decidem ajudá-lo.</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
