Adicionado pastas para direcionamento dos links internos.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <nav id="navbar">
     <div class="logo"> <img src="imgs/logo.png" alt=""> </div>
     <ul id="menu">
-        <li><a href="pokemon.html">POKÉMON</a></li>
-        <li><a href="personagens">PERSONAGENS</a></li>
-        <li><a href="eventos">EVENTOS</a></li>
-        <li><a href="contato">CONTATO</a></li>
-        <li><a href="loja">LOJA</a></li>
+        <li><a href="link/pokemon.html">POKÉMON</a></li>
+        <li><a href="link/personagens.html">PERSONAGENS</a></li>
+        <li><a href="link/evento.html">EVENTOS</a></li>
+        <li><a href="link/contato.html">CONTATO</a></li>
+        <li><a href="link/loja.html">LOJA</a></li>
     </ul>
     </nav>
 
