Criação link interno Pokémon.

--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokémon</title>
+    <link rel="icon" href="../imgs/favicon.ico" type="image/ico">
+    <link rel="stylesheet" href="stylepokemon.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   teste teste
+        <nav id="navbar">
+    <div class="logo"> <img src="../imgs/logo.png" alt=""> </div>
+    <ul id="menu">
+        <li><a href="link/pokemon.html">POKÉMON</a></li>
+        <li><a href="link/personagens.html">PERSONAGENS</a></li>
+        <li><a href="link/evento.html">EVENTOS</a></li>
+        <li><a href="link/contato.html">CONTATO</a></li>
+        <li><a href="link/loja.html">LOJA</a></li>
+    </ul>
+    </nav>
+    
+
+    <div class="container">
+
+    <h2>Pokédex Novos Pokémon Sun & Moon</h2>
+
+    <p class="texto-pokedex">Esta é uma lista dos novos Pokémon da região de Alola em <b>Pokémon Sun & Moon.</b> O Pokédex local é dividido em seções, uma para cada ilha. <br>Use os links abaixo para ver os Pokémon disponíveis em cada ilha.</p>
+
+    
+    <p class="jump"> <b>Ir para</b> 
+    <a href="#melemele">Melemele Island</a>
+    <a href="#melemele">Akala Island</a>
+    <a href="#melemele">Ula’ula Island</a>
+    <a href="#melemele">Poni Island</a>
+
+    </p>
+
+
+  
+    </div>
+
 </body>
 </html>
