--- a/link/evento.html
+++ b/link/evento.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokémon</title>
+    <link rel="icon" href="../imgs/favicon.ico" type="image/ico">
+    <link rel="stylesheet" href="stylepokemon.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   teste teste
+        <nav id="navbar">
+    <div class="logo"> <img src="../imgs/logo.png" alt=""> </div>
+    <ul id="menu">
+        <li><a href="link/pokemon.html">POKÉMON</a></li>
+        <li><a href="link/personagens.html">PERSONAGENS</a></li>
+        <li><a href="link/evento.html">EVENTOS</a></li>
+        <li><a href="link/contato.html">CONTATO</a></li>
+        <li><a href="link/loja.html">LOJA</a></li>
+    </ul>
+    </nav>
+   
+     <li class="carta" data-categoria="Comum" data-preco="600">
+                <img src="./src/imagens/carta-drahven.png" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <h2 class="nome-personagem">Drahven</h2>
+                    <span class="categoria">Categoria: Comum</span>
+                    <span class="preco">R$ 600,00</span>
+                     <a href="http://wa.me/5549988041744?text=Olá, quero comprar a carta Drahven!" class="btn-comprar" target="_blank">Comprar</a>
+                </div>
 </body>
 </html>
