Edições em pokemon.html

--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
         <nav id="navbar">
     <div class="logo"> <img src="../imgs/logo.png" alt=""> </div>
     <ul id="menu">
-        <li><a href="link/pokemon.html">POKÉMON</a></li>
-        <li><a href="link/personagens.html">PERSONAGENS</a></li>
+        <li><a href="./pokemon.html">POKÉMON</a></li>
+        <li><a href="./personagens.html">PERSONAGENS</a></li>
         <li><a href="link/evento.html">EVENTOS</a></li>
         <li><a href="link/contato.html">CONTATO</a></li>
         <li><a href="link/loja.html">LOJA</a></li>
@@ -26,20 +26,21 @@
 
     <div class="container">
 
-    <h2>Pokédex Novos Pokémon Sun & Moon</h2>
+    <h2 id="titulo">Pokédex Novos Pokémon Sun & Moon</h2>
 
     <p class="texto-pokedex">Esta é uma lista dos novos Pokémon da região de Alola em <b>Pokémon Sun & Moon.</b> O Pokédex local é dividido em seções, uma para cada ilha. <br>Use os links abaixo para ver os Pokémon disponíveis em cada ilha.</p>
 
     
     <p class="jump"> <b>Ir para</b> 
+    <a href="#alola">Alola Forms</a>
     <a href="#melemele">Melemele Island</a>
     <a href="#melemele">Akala Island</a>
     <a href="#melemele">Ula’ula Island</a>
     <a href="#melemele">Poni Island</a>
-
+    <a href="#lendarios">Ultra Beasts </a>
     </p>
 
-
+    <h2 id="alola">Alola Forms</h2>
   
     </div>
 
