Adição de novos pokémon.

--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -13,7 +13,7 @@
 
 <body>
         <nav id="navbar">
-    <div class="logo"> <img src="../imgs/logo.png" alt=""> </div>
+    <div class="logo"> <a href="../index.html"><img src="../imgs/logo.png" alt=""></a> </div>
     <ul id="menu">
         <li><a href="./pokemon.html">POKÉMON</a></li>
         <li><a href="./personagens.html">PERSONAGENS</a></li>
@@ -37,11 +37,212 @@
     <a href="#melemele">Akala Island</a>
     <a href="#melemele">Ula’ula Island</a>
     <a href="#melemele">Poni Island</a>
-    <a href="#lendarios">Ultra Beasts </a>
+    <a href="#lendarios">Ultra Beasts</a>
     </p>
 
     <h2 id="alola">Alola Forms</h2>
+    <p>Os Pokémon na Forma de Alola são adaptações climáticas dos Pokémon originais da 1ª geração para a região de Alola. Existem também variantes regionais como o <b>Oricorio</b>, que muda de forma conforme a ilha, mas ele <b>não faz parte da lista</b> abaixo porque não é uma "forma Alola" tradicional; é uma única espécie com quatro estilos distintos </p>
   
+        <div class="lista-pokemon">
+          <li class="pokemon">
+                <img src="../imgs/pokemon/alola/rattata-alolan.avif" alt="" />
+                <div class="informacoes">
+                    <p id="numero"> #019 </p>
+                    <h3 class="nome-pokemon">Rattata de Alola</h3>
+                    <a href="/type/noturno" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/normal" class="itype normal">Normal</a>
+                </div>
+            </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/noturno" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/normal" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raichu-alolan.avif" alt="" />
+                <div class="informacoes">
+                    <p id="numero"> #026 </p>
+                    <h3 class="nome-pokemon">Raichu de Alola</h3>
+                    <a href="/type/eletrico" class="itype eletrico">Elétrico</a> 
+                     · 
+                    <a href="/type/noturno" class="itype noturno">Noturno</a>
+                </div>
+
+             </li>
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/sandshrew-alolan.avif" alt="" />
+                <div class="informacoes">
+                    <p id="numero"> #027 </p>
+                    <h3 class="nome-pokemon">Sandshrew de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Gelo</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Metálico</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/sandslash-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #028 </p>
+                    <h3 class="nome-pokemon">Sandslash de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Gelo</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Metálico</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Vulpix de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+             <li class="pokemon">
+                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <div class="informacoes">
+                    <p id="numero"> #020 </p>
+                    <h3 class="nome-pokemon">Raticate de Alola</h3>
+                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                     · 
+                    <a href="/type/grass" class="itype normal">Normal</a>
+                </div>
+             </li>
+
+        </div>
     </div>
 
 </body>
