--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav id="navbar">
-    <div class="logo"> <img src="imgs/logo.png" alt=""> </div>
+    <div class="logo"> <a href="index.html"> <img src="imgs/logo.png" alt=""> </a> </div>
     <ul id="menu">
         <li><a href="link/pokemon.html">POKÉMON</a></li>
         <li><a href="link/personagens.html">PERSONAGENS</a></li>
