Imagens dos Pokémon adicionadas.

--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -7,8 +7,9 @@
     <link rel="icon" href="../imgs/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="stylepokemon.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
 
     <div class="container">
 
-    <h2 id="titulo">Pokédex Novos Pokémon Sun & Moon</h2>
+    <h1 id="titulo">Pokédex Novos Pokémon Sun & Moon</h1>
 
     <p class="texto-pokedex">Esta é uma lista dos novos Pokémon da região de Alola em <b>Pokémon Sun & Moon.</b> O Pokédex local é dividido em seções, uma para cada ilha. <br>Use os links abaixo para ver os Pokémon disponíveis em cada ilha.</p>
 
@@ -40,8 +41,9 @@
     <a href="#lendarios">Ultra Beasts</a>
     </p>
 
-    <h2 id="alola">Alola Forms</h2>
-    <p>Os Pokémon na Forma de Alola são adaptações climáticas dos Pokémon originais da 1ª geração para a região de Alola. Existem também variantes regionais como o <b>Oricorio</b>, que muda de forma conforme a ilha, mas ele <b>não faz parte da lista</b> abaixo porque não é uma "forma Alola" tradicional; é uma única espécie com quatro estilos distintos </p>
+    <div id="alola">
+    <h1>Alola Forms</h1>
+    <p>Os Pokémon na forma de Alola são adaptações climáticas dos Pokémon originais da 1ª geração para a região de Alola. Existem também variantes regionais como o <b>Oricorio</b>, que muda de forma conforme a ilha, mas ele <b>não faz parte da lista</b> abaixo porque não é uma "forma Alola" tradicional; é uma única espécie com quatro estilos distintos </p></div>
   
         <div class="lista-pokemon">
           <li class="pokemon">
@@ -73,7 +75,7 @@
                     <h3 class="nome-pokemon">Raichu de Alola</h3>
                     <a href="/type/eletrico" class="itype eletrico">Elétrico</a> 
                      · 
-                    <a href="/type/noturno" class="itype noturno">Noturno</a>
+                    <a href="/type/psiquico" class="itype psiquico">Psíquico</a>
                 </div>
 
              </li>
@@ -82,163 +84,157 @@
                 <div class="informacoes">
                     <p id="numero"> #027 </p>
                     <h3 class="nome-pokemon">Sandshrew de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Gelo</a> 
+                    <a href="/type/gelo" class="itype gelo">Gelo</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Metálico</a>
+                    <a href="/type/metalico" class="itype metalico">Metálico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/sandslash-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/sandslash-alolan.avif" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #028 </p>
                     <h3 class="nome-pokemon">Sandslash de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Gelo</a> 
+                    <a href="/type/gelo" class="itype gelo">Gelo</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Metálico</a>
+                    <a href="/type/metalico" class="itype metalico">Metálico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/vulpix-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
+                    <p id="numero"> #037 </p>
                     <h3 class="nome-pokemon">Vulpix de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
-                     · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/gelo" class="itype gelo">Gelo</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/ninetales-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #038 </p>
+                    <h3 class="nome-pokemon">Ninetales de Alola</h3>
+                    <a href="/type/gelo" class="itype gelo">Gelo</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/fada" class="itype fada">Fada</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/diglett-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #050 </p>
+                    <h3 class="nome-pokemon">Diglett de Alola</h3>
+                    <a href="/type/terrestre" class="itype terrestre">Terrestre</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/metalico" class="itype metalico">Metálico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/dugtrio-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #051 </p>
+                    <h3 class="nome-pokemon">Dugtrio de Alola</h3>
+                    <a href="/type/terrestre" class="itype terrestre">Terrestre</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/metalico" class="itype metalico">Metálico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/meowth-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
-                     · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <p id="numero"> #052 </p>
+                    <h3 class="nome-pokemon">Meowth de Alola</h3>
+                    <a href="/type/noturno" class="itype noturno">Noturno</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/persian-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
-                     · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <p id="numero"> #053 </p>
+                    <h3 class="nome-pokemon">Persian de Alola</h3>
+                    <a href="/type/noturno" class="itype noturno">Noturno</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/geodude-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #074 </p>
+                    <h3 class="nome-pokemon">Geodude de Alola</h3>
+                    <a href="/type/pedra" class="itype pedra">Pedra</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/eletrico" class="itype eletrico">Elétrico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/graveler-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #075 </p>
+                    <h3 class="nome-pokemon">Graveler de Alola</h3>
+                    <a href="/type/pedra" class="itype pedra">Pedra</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/eletrico" class="itype eletrico">Elétrico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/golem-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #076 </p>
+                    <h3 class="nome-pokemon">Golem de Alola</h3>
+                    <a href="/type/pedra" class="itype pedra">Pedra</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/eletrico" class="itype eletrico">Elétrico</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/grimer-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #088 </p>
+                    <h3 class="nome-pokemon">Grimer de Alola</h3>
+                    <a href="/type/veneno" class="itype veneno">Veneno</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/sombrio" class="itype sombrio">Sombrio</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/muk-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #089 </p>
+                    <h3 class="nome-pokemon">Muk de Alola</h3>
+                    <a href="/type/veneno" class="itype veneno">Veneno</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/sombrio" class="itype sombrio">Sombrio</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/exeggutor-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #103 </p>
+                    <h3 class="nome-pokemon">Exeggutor de Alola</h3>
+                    <a href="/type/grass" class="itype grama">Grama</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/dragao" class="itype dragao">Dragão</a>
                 </div>
              </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/alola/raticate-alolan.avif" alt="Carta Drahven" />
+                <img src="../imgs/pokemon/alola/marowak-alolan.avif" alt="" />
                 <div class="informacoes">
-                    <p id="numero"> #020 </p>
-                    <h3 class="nome-pokemon">Raticate de Alola</h3>
-                    <a href="/type/grass" class="itype noturno">Noturno</a> 
+                    <p id="numero"> #105 </p>
+                    <h3 class="nome-pokemon">Marowak de Alola</h3>
+                    <a href="/type/fogo" class="itype fogo">Fogo</a> 
                      · 
-                    <a href="/type/grass" class="itype normal">Normal</a>
+                    <a href="/type/fantasma" class="itype fantasma">Fantasma</a>
                 </div>
              </li>
 
