Correções no tamanho de Lycanrocs

--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -432,7 +432,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/oricorio-baile.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/oricorio (1).png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #082 </p>
                     <h3 class="nome-pokemon">Oricorio Baile Style</h3>
@@ -443,7 +443,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/oricorio-pau.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/oripau.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #082 </p>
                     <h3 class="nome-pokemon">Pa’u Style</h3>
@@ -454,7 +454,7 @@
             </li>
 
               <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/oricorio-sensu.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/orisensu.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #082 </p>
                     <h3 class="nome-pokemon">Sensu Style</h3>
@@ -465,7 +465,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/oricorio-pom-pom.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/orippompom.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #082 </p>
                     <h3 class="nome-pokemon">Pom-Pom Style</h3>
@@ -476,7 +476,7 @@
             </li>
 
              <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/rockruff.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/rockruff.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #103 </p>
                     <h3 class="nome-pokemon">Rockruff</h3>
@@ -485,7 +485,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/lycanroc-dusk.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/dusk2.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #104 </p>
                     <h3 class="nome-pokemon">Lycanroc (Dusk Form)</h3>
@@ -494,7 +494,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/lycanroc-midday.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/day2.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #104 </p>
                     <h3 class="nome-pokemon">Lycanroc (Midday Form)</h3>
@@ -503,7 +503,7 @@
             </li>
 
             <li class="pokemon">
-                <img src="../imgs/pokemon/melemele/lycanroc-midnight.avif" alt="" />
+                <img src="../imgs/pokemon/melemele/mid2.png" alt="" />
                 <div class="informacoes">
                     <p id="numero"> #104 </p>
                     <h3 class="nome-pokemon">Lycanroc (Midnight Form)</h3>
