--- a/link/pokemon.html
+++ b/link/pokemon.html
@@ -1183,9 +1183,9 @@
                 <div class="informacoes">
                     <p id="numero"> #277 </p>
                     <h3 class="nome-pokemon">Murkrow</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
+                    <a href="/type/noturno" class="itype noturno">Noturno</a> 
                     · 
-                    <a href="/type/terrestre" class="itype terrestre">Terrestre</a> 
+                    <a href="/type/voador" class="itype voador">Voador</a>  
                 </div>
             </li>
 
@@ -1194,9 +1194,9 @@
                 <div class="informacoes">
                     <p id="numero"> #278 </p>
                     <h3 class="nome-pokemon">Honchkrow</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
+                    <a href="/type/noturno" class="itype noturno">Noturno</a> 
                     · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/voador" class="itype voador">Voador</a> 
                 </div>
             </li>
 
@@ -1205,9 +1205,7 @@
                 <div class="informacoes">
                     <p id="numero"> #279 </p>
                     <h3 class="nome-pokemon">Riolu</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
-                    · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/lutador" class="itype lutador">Lutador</a>
                 </div>
             </li>
 
@@ -1216,9 +1214,9 @@
                 <div class="informacoes">
                     <p id="numero"> #280 </p>
                     <h3 class="nome-pokemon">Lucario</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
+                    <a href="/type/lutador" class="itype lutador">Lutador</a> 
                     · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/metalico" class="itype metalico">Metálico</a>
                 </div>
             </li>
 
@@ -1227,9 +1225,7 @@
                 <div class="informacoes">
                     <p id="numero"> #281 </p>
                     <h3 class="nome-pokemon">Dratini</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
-                    · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/dragao" class="itype dragao">Dragão</a>
                 </div>
             </li>
 
@@ -1238,9 +1234,7 @@
                 <div class="informacoes">
                     <p id="numero"> #282 </p>
                     <h3 class="nome-pokemon">Dragonair</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
-                    · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/dragao" class="itype dragao">Dragão</a>
                 </div>
             </li>
 
@@ -1251,7 +1245,7 @@
                     <h3 class="nome-pokemon">Dragonite</h3>
                     <a href="/type/dragao" class="itype dragao">Dragão</a> 
                     · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/voador" class="itype voador">Voador</a> 
                 </div>
             </li>
 
@@ -1260,9 +1254,9 @@
                 <div class="informacoes">
                     <p id="numero"> #284 </p>
                     <h3 class="nome-pokemon">Aerodactyl</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
+                    <a href="/type/pedra" class="itype pedra">Pedra</a> 
                     · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/voador" class="itype voador">Voador</a>  
                 </div>
             </li>
 
@@ -1271,9 +1265,9 @@
                 <div class="informacoes">
                     <p id="numero"> #288 </p>
                     <h3 class="nome-pokemon">Tapu Fini</h3>
-                    <a href="/type/dragao" class="itype dragao">Dragão</a> 
+                    <a href="/type/agua" class="itype agua">Água</a> 
                     · 
-                    <a href="/type/terra" class="itype terra">Terra</a> 
+                    <a href="/type/fada" class="itype fada">Fada</a> 
                 </div>
             </li>
 
