--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon GO</title>
-    <link rel="icon" href="imgs/favicon.ico" type="image/ico">
+    <link rel="icon" href="imgs/icon/favicon-32x32.png" type="image/ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,14 +16,14 @@
         <li><a href="link/pokemon.html">POKÉMON</a></li>
         <li><a href="link/personagens.html">PERSONAGENS</a></li>
         <li><a href="link/evento.html">EVENTOS</a></li>
-        <li><a href="link/contato.html">CONTATO</a></li>
-        <li><a href="link/loja.html">LOJA</a></li>
+        <li><a href="https://www.reddit.com/r/PokeMoonSun/" target="_blank">FÓRUM </a></li>
+        <li><a href="https://lista.mercadolivre.com.br/pokemon-sol-e-lua?matt_tool=82557158&matt_word=Default_URL_MLB&matt_source=bing&matt_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&matt_campaign_id=382841304&matt_ad_group=DSA%20-%20All%20Pages&matt_match_type=b&matt_network=o&matt_device=c&matt_keyword=mercadolivre%20com&msclkid=aad98fc1588b10c01626e76af19f10d1&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&utm_term=mercadolivre%20com&utm_content=DSA%20-%20All%20Pages" target="_blank">LOJA</a></li>
     </ul>
     </nav>
 
     <div class="container">
         <a class="cont-banner" href="https://www.primevideo.com/-/pt/detail/Pok%C3%A9mon-the-Series-Sun-Moon/0MO3POR25Q8GTB4EOGSEHGPF0D" target="_blank">
-        <img src="imgs/banner.jpg" alt=""></a>
+        <img src="imgs/poke1_gif 533×300 pixels.gif" alt=""></a>
 
 
         <div class="cont-enredo">
