--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
     <ul id="menu">
         <li><a href="link/pokemon.html">POKÉMON</a></li>
         <li><a href="link/personagens.html">PERSONAGENS</a></li>
-        <li><a href="link/evento.html">EVENTOS</a></li>
         <li><a href="https://www.reddit.com/r/PokeMoonSun/" target="_blank">FÓRUM </a></li>
         <li><a href="https://lista.mercadolivre.com.br/pokemon-sol-e-lua?matt_tool=82557158&matt_word=Default_URL_MLB&matt_source=bing&matt_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&matt_campaign_id=382841304&matt_ad_group=DSA%20-%20All%20Pages&matt_match_type=b&matt_network=o&matt_device=c&matt_keyword=mercadolivre%20com&msclkid=aad98fc1588b10c01626e76af19f10d1&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_GEN_X_DSA_ALLB_TXS_ALL&utm_term=mercadolivre%20com&utm_content=DSA%20-%20All%20Pages" target="_blank">LOJA</a></li>
     </ul>
     </nav>
 
-    <div class="container">
-        <a class="cont-banner" href="https://www.primevideo.com/-/pt/detail/Pok%C3%A9mon-the-Series-Sun-Moon/0MO3POR25Q8GTB4EOGSEHGPF0D" target="_blank">
-        <img src="imgs/poke1_gif 533×300 pixels.gif" alt=""></a>
 
+      <div class="titulo"><h1>Pokémon Sun & Moon Series</h1></div>
+
+       <div class="container">
+        <a class="cont-banner" href="https://www.primevideo.com/-/pt/detail/Pok%C3%A9mon-the-Series-Sun-Moon/0MO3POR25Q8GTB4EOGSEHGPF0D" target="_blank">
+        <img src="imgs/poke1_gif 533×300 pixels.gif" alt=""> Clique acima para assistir à série na Prime Video!</a>
+
+
+      
 
         <div class="cont-enredo">
-        <h2>Enredo</h2>
-        <p>Ash, Delia e Mr. Mime, apelidado de Mime, estão de férias na região de Alola, quando Ash tem um encontro com Tapu Koko, o guardião Pokémon da Ilha de Melemele, que o apresenta a Pulseira Z, um dispositivo que, quando emparelhado com um cristal especial, permite que um Pokémon lance um movimento poderoso quando sincronizado com seu treinador. Isso o leva a ficar em Alola e se matricular na escola Pokémon local. Quando ele decide realizar os testes necessários para dominar o poder do Anel Z, os novos colegas de classe de Ash: Victoria, Lulú, Lillian, Cris e Kiawe decidem ajudá-lo.</p>
+
+         <p>Ash, Delia e Mr. Mime, apelidado de Mime, estão de férias na região de Alola, quando Ash tem um encontro com Tapu Koko, o guardião Pokémon da Ilha de Melemele, que o apresenta a Pulseira Z, um dispositivo que, quando emparelhado com um cristal especial, permite que um Pokémon lance um movimento poderoso quando sincronizado com seu treinador. Isso o leva a ficar em Alola e se matricular na escola Pokémon local. Quando ele decide realizar os testes necessários para dominar o poder do Anel Z, os novos colegas de classe de Ash: Victoria, Lulú, Lillian, Cris e Kiawe decidem ajudá-lo.</p>
         </div>
     </div>
 
